--- a/index.html
+++ b/index.html
@@ -62,7 +62,6 @@
             </h1>
 
             <!-- Add a short description about yourself or your brand -->
-            <p>a podcast documenting the voyage of understanding the world. philosophical meditations, thoughts on social nature and being, and literature.</p>
 
             <p>
               <iframe style="border-radius:12px" src="https://open.spotify.com/embed/show/3Gwt4r3V3TqPVPYY5fpAB9?utm_source=generator&theme=0" width="100%" height="152" frameBorder="0" allowfullscreen="" allow="autoplay; clipboard-write; encrypted-media; fullscreen; picture-in-picture" loading="lazy">
@@ -86,7 +85,7 @@
               -->
 
               <!-- Generic RSS -->
-              <a class="button button-default" href="https://api.substack.com/feed/podcast/2038180/private/0cff4fca-2404-40ad-b0f8-ee0938d43d59.rss" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-rss.svg" alt="RSS Icon">Subscribe to RSS</a>
+              <a class="button button-default" href="https://anchor.fm/s/1033bb0b0/podcast/rss" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/generic-rss.svg" alt="RSS Icon">Subscribe to RSS</a>
 
               <!-- Buy Me A Coffee
               <a class="button button-coffee" href="#" target="_blank" rel="noopener" role="button"><img class="icon" aria-hidden="true" src="images/icons/buy-me-a-coffee.svg" alt="Buy Me A Coffee Logo">Buy Me A Coffee</a>
@@ -99,7 +98,7 @@
       <hr>
           © 2025 <a href="https://nibirsan.org" target="_blank" rel="noopener">Nibir Sankar</a>
 . All rights reserved. <br>
-          Build your own by forking <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>
+          Built with <a href="https://littlelink.io" target="_blank" rel="noopener">LittleLink</a>
           
     </footer> 
     </div>
